--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
+                <img src="list_icon.png" width="70" height="70">
                 <h2>Elemental List</h2>
                 <p>v1</p>
             </div>
