--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSdM50-fK5jjU8-LhKf97-f8b3PoAmLNqGLACkehx2XJtJYzDQ/viewform?usp=dialog"
                         target="_blank"
                         >Submit Record</a
                     >
